kubernetes/dev/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discuss-dev
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: discuss-dev
    spec:
      volumes:
      - name: prod-secret-exs
        secret:
          secretName: prod-secret-exs
      containers:
      - name: discuss-dev
        image: us.gcr.io/emma-today/discuss:0.0.20
        imagePullPolicy: Always
        command:
        - "/opt/app/bin/discuss"
        - "foreground"
        resources:
          limits:
            cpu: 500m
            memory: 150Mi
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 60
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - mountPath: /prod-secret-exs
          name: prod-secret-exs
